<resources>
    <string name="xene">Xene</string>
    <string name="app_name">XENE-user</string>
    <string name="_91">+91</string>
    <string name="title_activity_main_navigation">main_activity_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_header_profilepic_description">User\'s Profile Picture</string>
    <string name="navigation_header_deals">Deals</string>
    <string name="navigation_header_email">yashtejwani00@gmail.com</string>
    <string name="navigation_header_messages">Messages</string>
    <string name="navigation_header_name">Yashwant Tejwani</string>
    <string name="navigation_header_deals_count">5</string>
    <string name="navigation_header_messages_count">2</string>

    <string name="card_view_image_contentDescription">picture of pg</string>
    <string name="card_view_name_of_pg">Name of PG</string>
    <string name="card_view_area_of_pg">Area of PG</string>
    <string name="slide_bar_menu_1">Edit Profile</string>
    <string name="slide_bar_menu_2">My Deals</string>
    <string name="slide_bar_menu_3">Help</string>
    <string name="layout_pg_pictures_likeButton_description">add to favourate button</string>
    <string name="layout_pg_pictures_name">Name of pg</string>
    <string name="layout_pg_pictures_area">Area of pg</string>
    <string name="layout_pg_pictures_rent_text">Rent per Month</string>
    <string name="layout_pg_pictures_rent">4000/-</string>
    <string name="layout_pg_pictures_utilities">Utilities :</string>
    <string name="layout_pg_pictures_book">Book</string>

    <string name="layout_pg_description_filler_text"><![CDATA[<this is filler text> Premium – Exclusive (PG) Co Living Acommodations in Bungalow Building Contemporary Planned Spacious Rooms Calm and Peaceful, Professionally Designed Luxurious Accommodation for Corporate Working Men. \n\nConceptually designed 4 Spacious (140–170 Sq. Ft. Carpet) Rooms on twin Sharing Basis. \n\n# Power bill will be borne by the Paying Guest* \n\n# Easy access to Local Market Streets, Restaurants, Gym, ATM, Metro Station, Airport ETC. \n\n# Rent includes Repair and Maintenance of the all appliances including the AC. (). \n\n# Bed sheet washing and changing. (Free of Cost) \n\n# Only for Verified Responsible and Disciplined Corporate Room-mates. \n\n# Plush upholstery with Marble flooring / Vitrified Tiles.]]></string>
    <string name="layout_pg_description_description">Description :</string>

    <string name="layout_pg_location_location">Location of pg :</string>

    <string name="layout_pg_review_data_name">yashwant tejwani</string>
    <string name="layout_pg_review_data_filler_text"><![CDATA[<this is filler text> saw this property , nice place to live the environment is peacful tu study.\nI strongly recommend this pg]]></string>

    <string name="layout_pg_reviews_reviews">Reviews :</string>
    <string name="faq_q1">your first question here ?</string>
    <string name="faq_a1">ans here comes the answer of your first question mother fucker. now get out.</string>
    <string name="notification_data_detail">filler text the pg you applied for gave reponse.\nclick here you check it out and start conversation with the owner.</string>
    <string name="notification_data_heading">filler text you got response</string>
    <string name="layoutFaqData_Q">Q :</string>

</resources>