<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="200dp"
    app:cardCornerRadius="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#FFFFFF">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_marginTop="5dp"
            android:layout_width="190dp"
            android:layout_height="135dp"
            android:elevation="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/card_view_image_contentDescription" />


        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="@drawable/dotted_line"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_view_name_of_pg"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:textColor="	#000000"
            app:layout_constraintTop_toBottomOf="@+id/img1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_view_area_of_pg"
            android:layout_marginStart="5dp"
            android:textColor="#FFD700"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="SmallSp" />


        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:progressBackgroundTint="#5C5959"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:progressTint="#FFD700"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            android:rating="2.5" />

        <com.like.LikeButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>